--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,2 @@
-DEPS__DB_POOL=5                          # макс. размер пула
-DEPS__DB_HOST=localhost                  # IP/хост сервера БД
-DEPS__DB_PORT=5432                       # порт сервера БД
-DEPS__DB_USER=wsp_depends                # имя пользователя БД
-DEPS__DB_PASS=wsp_depends                # пароль пользователя БД
-DEPS__DB_BASE=wsp_depends                # подключаемая БД
-
-DEPS__CACHE_URL=redis://localhost:6379   # строка подключения к кешу
+KAFKA_BROKERS=localhost:9092,host1:9092   # список подключений
+KAFKA_GROUP_ID=ets-server                 # группа обработки
