--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "https://github.com/wsp-repo/",
   "license": "ISC",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/wsp-repo/ets-client.git"
