--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wspro/ets-client",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "ETS Client",
   "author": "https://github.com/wsp-repo/",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "prepublishOnly": "npm run lint"
   },
   "dependencies": {
+    "@wspro/core": "1.0.2",
     "kafkajs": "2.1.0",
     "uuid": "8.3.2"
   },
